[gd_scene load_steps=6 format=3]

[ext_resource type="PackedScene" path="res://Util/FileChooser.tscn" id="1"]
[ext_resource type="FontFile" path="res://UI/Fonts/TextBold.tres" id="2"]
[ext_resource type="Script" path="res://UI/Layers/LayerConfiguration/SpecificLayerCompositionUI/ObjectLayer.gd" id="3"]
[ext_resource type="PackedScene" path="res://Util/Warning.tscn" id="4"]
[ext_resource type="PackedScene" path="res://UI/Layers/LayerConfiguration/Misc/GeodataChooser.tscn" id="5"]

[node name="ObjectLayer" type="HSplitContainer"]
offset_right = 1024.0
offset_bottom = 150.0
minimum_size = Vector2( 0, 150 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBox" type="VBoxContainer" parent="."]
offset_right = 225.0
offset_bottom = 353.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="LeftBox"]
offset_right = 225.0
offset_bottom = 50.0
minimum_size = Vector2( 0, 50 )

[node name="Title" type="Label" parent="LeftBox/Title"]
offset_right = 225.0
offset_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Object-Layer"

[node name="HSeparator" type="HSeparator" parent="LeftBox/Title"]
offset_top = 31.0
offset_right = 225.0
offset_bottom = 39.0

[node name="Points" type="Label" parent="LeftBox"]
offset_top = 58.0
offset_right = 225.0
offset_bottom = 143.0
minimum_size = Vector2( 0, 85 )
text = "Point-data:"

[node name="PointGroundHeight" type="Label" parent="LeftBox"]
offset_top = 151.0
offset_right = 225.0
offset_bottom = 236.0
minimum_size = Vector2( 0, 85 )
text = "Point-ground-height:"

[node name="Object" type="Label" parent="LeftBox"]
offset_top = 244.0
offset_right = 225.0
offset_bottom = 284.0
minimum_size = Vector2( 0, 40 )
text = "Object:"

[node name="RightBox" type="VBoxContainer" parent="."]
offset_left = 249.0
offset_right = 1024.0
offset_bottom = 353.0

[node name="Spacer" type="Control" parent="RightBox"]
offset_right = 775.0
offset_bottom = 50.0
minimum_size = Vector2( 0, 50 )

[node name="GeodataChooserPoint" parent="RightBox" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 58.0
offset_right = 775.0
offset_bottom = 143.0
show_raster_layers = false

[node name="GeodataChooserHeight" parent="RightBox" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 151.0
offset_right = 775.0
offset_bottom = 236.0
show_feature_layer = false

[node name="FileChooser" parent="RightBox/GeodataChooserHeight" index="0"]
offset_right = 775.0

[node name="OptionButton" parent="RightBox/GeodataChooserHeight" index="1"]
offset_right = 775.0

[node name="ObjectChooser" parent="RightBox" instance=ExtResource( 1 )]
offset_top = 244.0
offset_right = 775.0
offset_bottom = 289.0
filters = PackedStringArray( "*.tscn", "*.obj" )

[node name="FileName" parent="RightBox/ObjectChooser" index="0"]
offset_right = 666.0

[node name="Button" parent="RightBox/ObjectChooser" index="1"]
offset_left = 674.0
offset_right = 775.0

[node name="FileDialog" parent="RightBox/ObjectChooser/Button" index="0"]
current_dir = "/home/landscapelab/landscapelab"
current_path = "/home/landscapelab/landscapelab/"

[node name="Warning" parent="RightBox" instance=ExtResource( 4 )]
visible = false
offset_top = 292.0
offset_right = 775.0
offset_bottom = 330.0

[node name="Label" type="Label" parent="RightBox"]
offset_top = 297.0
offset_right = 775.0
offset_bottom = 353.0
text = "The selected file can either be a native scene or an external OBJ (with an accompanying MTL)."
autowrap = true

[editable path="RightBox/GeodataChooserHeight"]
[editable path="RightBox/ObjectChooser"]
